[project]
name = "yt2md"
version = "0.2.0"
description = "Extract YouTube transcripts as Markdown with clickable timestamps"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Francy Lisboa Charuto", email = "agrolisboa@gmail.com" }]
dependencies = [
    "yt-dlp[default,curl-cffi]>=2025.10.22",
]

[project.scripts]
yt2md = "yt2md.cli:main"

[project.urls]
Repository = "https://github.com/FrancyJGLisboa/yt2md"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt2md"]
